--- a/dotnet/CHANGELOG
+++ b/dotnet/CHANGELOG
@@ -1,3 +1,12 @@
+v4.10.0
+======
+* Add CDP files for v114 and remove v111
+* Remove Selenium RC and WebDriverBackedSelenium code (#12024)
+* Improve compilation and publishing of Selenium Manager (#12045)
+* Fix version reported by HTTP user agent (#12061)
+* Support proxies for Selenium Manager (#12100)
+
+
 v4.9.1
 ======
 * Add CDP files for v113 and remove v110
