--- a/java/CHANGELOG
+++ b/java/CHANGELOG
@@ -1,3 +1,27 @@
+v4.10.0
+======
+* Supported CDP versions: 85, 112, 113, 114
+* Remove Selenium RC and WebDriverBackedSelenium code (#12024)
+* Fixed URI in logs (#12000)
+* Enhancing stereotype in Dynamic Grid (#12034)
+* Support proxies in Selenium Manager (#12036)
+* Close websockets when closing JDK HTTP Client (#12035)
+* Change bidi loglevel warning level (#12054)
+* Allow driving embedded apps without CDP (#11963)
+* Fix possible freeze from incompatible HTTP responses (#12055)
+* Fix bug when JSON max depth reached (#12056)
+* Remove deprecated capabilities `SUPPORTS_JAVASCRIPT` and `SUPPORTS_WEB_STORAGE`
+* Remove deprecated setters in `Rectangle`
+* improve cleaning of upload and download directories (#12059)
+* Fix redirect bug in JDK HTTP Client (#12070)
+* Prevent grid from creating sessions that will time out in queue (#12014)
+* Respect disabled pretty printing for arrays (#12079)
+* Add support for WebView2 in Edge
+* Allow setting savefile directory in Chrome when downloads are enabled (#12109)
+* Add BiDi support for browing context events
+* Enable BiDi functionality for Chromium browsers
+*
+
 v4.9.1
 ======
 * Supported CDP versions: 85, 111, 112, 113
